:bug: debug: Fix (overflow:hidden + border-radius) Safari issue
Added isolation property

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ header {
 #profile h2{
     width: 270px;
     height: 270px;
-    -webkit-mask-image: -webkit-radial-gradient(white, black);
+    isolation: isolate;
+    /* -webkit-mask-image: -webkit-radial-gradient(white, black); */
     border-radius: 70%;
     margin: auto;
     overflow: hidden;
